# coherence

./: README.md  experiential_memory_BUILD_PLAN.md  pyproject.toml
coherence/: __init__.py  activation.py  autopilot.py  eligibility.py  enrichment.py  experience.py  forget.py  graph.py  judging.py  matcher.py  node.py  recall_llm.py  reinforce.py
coherence/integrations/: __init__.py  anthropic_protocol.py  mcp.py  openai_protocol.py  session.py  tools.py
docs/: architecture.md  concepts.md  getting-started.md  integrations.md  learning.md  outcomes.md
examples/: 01_simulation_learning_curve.py  02_personal_research_assistant.py  03_custom_agentic_harness.py  _azure_client.py  _chat_router.py  _claude_client.py  memory_simulation.json
tests/: test_smoke.py
