[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "coherence"
version = "0.1.0"
description = "Embeddingless memory framework for LLM agents — LLM-selection recall over verbatim text, single-file JSON state, no embedding model, no vector database, no LLM call at ingest."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "abhijithneilabraham" }]
keywords = [
    "memory",
    "agents",
    "llm",
    "embeddingless",
    "verbatim-recall",
    "listwise-reranking",
    "json",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
examples = []
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/abhijithneilabraham/coherence"

[tool.setuptools.packages.find]
include = ["coherence*"]
exclude = ["examples*", "tests*"]
